envio de emails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
-org.springframework.boot.autoconfigure.data.web.SpringDataWebAutoConfiguration
+application.mail.lateloans.message=Atenção! Você tem um emprestimo atrasado. Por favor, devolver o livro o mais rápido possível.
+application.mail.default-remetent=mail@library-api.com
 
+spring.mail.username=95be9825277031
+spring.mail.protocol=smtp
+spring.mail.port=2525
+spring.mail.password=51abe2dfa3235b
+spring.mail.host=smtp.mailtrap.io
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
