--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
 application.mail.lateloans.message=Atenção! Você tem um emprestimo atrasado. Por favor, devolver o livro o mais rápido possível.
 application.mail.default-remetent=mail@library-api.com
 
@@ -9,3 +12,11 @@ spring.mail.host=smtp.mailtrap.io
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# --------------------- actuator ? configurações de log
+management.endpoints.web.exposure.include=*
+# criando um logfile
+logging.file.name=appfile.log
+
+# --------------------- configuração do spring boot admin
+spring.boot.admin.client.url=http://localhost:8081/
