--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>library-api</name>
 	<description>API DO PROJETO DE BIBLIOTECAS</description>
+	<packaging>jar</packaging>
+
 
 	<properties>
 		<java.version>11</java.version>
@@ -33,6 +35,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -54,6 +57,7 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
